+ added links to "bio" partial

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Adiar a execução de procedures tem algumas vantagens:
           I am Software Architect at <a href="www.triersistemas.com.br">Trier Sistemas</a>
 <br /> <a href="https://www.embarcadero.com/embarcadero-mvp-program">Embarcadero MVP</a>.
 <br /> Regular speaker at software conferences. 
-<br /> [desktop, cloud and mobile in mostly in Delphi and Golang]
+<br /> [desktop, cloud and mobile in mostly in <a href="https://www.embarcadero.com/products/delphi">Delphi</a> and <a href="https://golang.org/">Golang</a>]
 
         </p>
       </div>
