--- a/404.html
+++ b/404.html
@@ -69,7 +69,7 @@ Hey! Something went wrong about your request, check the URL and try again.
           I am Software Architect at <a href="www.triersistemas.com.br">Trier Sistemas</a>
 <br /> <a href="https://www.embarcadero.com/embarcadero-mvp-program">Embarcadero MVP</a>.
 <br /> Regular speaker at software conferences. 
-<br /> [desktop, cloud and mobile in mostly in Delphi and Golang]
+<br /> [desktop, cloud and mobile in mostly in <a href="https://www.embarcadero.com/products/delphi">Delphi</a> and <a href="https://golang.org/">Golang</a>]
 
         </p>
       </div>
