* Melhoria na "Descrição" + Adicionado "Para Quem é Este Livro?"

--- a/index.html
+++ b/index.html
@@ -39,8 +39,27 @@
         <section id="description">
             <h2>Sua aplicação Delphi congela em operações demoradas?</h2>
             <p>Você sente que não está aproveitando todo o poder dos processadores multi-core modernos? É hora de dominar a programação concorrente.</p>
-            <p>Este livro é um guia prático e completo, escrito por um Embarcadero MVP com quase 30 anos de experiência. Do básico da TThread à elegância da Parallel Programming Library (PPL), você aprenderá a construir aplicações robustas, evitar os temidos "UI Freezes", e resolver problemas complexos como race conditions e deadlocks. Prepare-se para transformar suas aplicações desktop e mobile, entregando a performance e a fluidez que seus usuários esperam.</p>
+            <p>Este livro é um guia prático e completo, escrito por um Embarcadero MVP com quase 30 anos de experiência. Do básico da TThread à elegância da Parallel Programming Library (PPL), você aprenderá a construir aplicações robustas, evitar os temidos "UI Freezes", e resolver problemas complexos como race conditions e deadlocks.</p>
+            <p><strong>Com quase 500 páginas, esta é uma formação completa que te leva do zero ao nível profissional.</strong> Prepare-se para transformar suas aplicações desktop, mobile, web e cloud entregando a performance e a fluidez que seus usuários esperam.</p>
         </section>
+
+        <section id="for-who">
+            <h2>Para Quem é Este Livro?</h2>
+            <div class="for-who-cards">
+                <div class="card">
+                    <h3>Para o Desenvolvedor Iniciante</h3>
+                    <p>Se você está começando com threads, este livro é o seu guia. Aprenda os fundamentos de forma clara, com exemplos passo a passo, e construa uma base sólida para evitar os erros mais comuns.</p>
+                </div>
+                <div class="card">
+                    <h3>Para o Desenvolvedor Experiente</h3>
+                    <p>Eleve suas habilidades a um novo patamar. Aprofunde-se em primitivas de sincronização, domine a PPL, e aprenda a aplicar padrões de arquitetura avançados para criar aplicações mais robustas e escaláveis.</p>
+                </div>
+                <div class="card">
+                    <h3>Para o Arquiteto de Software</h3>
+                    <p>Projete sistemas de alta performance. Entenda as nuances do gerenciamento de memória, as particularidades do desenvolvimento mobile e os padrões de resiliência essenciais para sistemas críticos.</p>
+                </div>
+            </div>
+        </section>        
 
         <section id="highlights">
             <h2>Destaques do Livro</h2>
