--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main class="container">
         <section id="description">
             <h2>Sua aplicação Delphi congela em operações demoradas?</h2>
-            <p>Você sente que não está aproveitando todo o poder dos processadores multi-core modernos? É hora de dominar a programação concorrente.</p>
+            <p>Você sente que não está aproveitando todo o poder dos processadores multi-core modernos? É hora de dominar a programação concorrente e o paralelismo.</p>
             <p>Este livro é um guia prático e completo, escrito por um Embarcadero MVP com quase 30 anos de experiência. Do básico da TThread à elegância da Parallel Programming Library (PPL), você aprenderá a construir aplicações robustas, evitar os temidos "UI Freezes", e resolver problemas complexos como race conditions e deadlocks.</p>
             <p><strong>Com quase 500 páginas, esta é uma formação completa que te leva do zero ao nível profissional.</strong> Prepare-se para transformar suas aplicações desktop, mobile, web e cloud entregando a performance e a fluidez que seus usuários esperam.</p>
         </section>
