Modificado o providor de email

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="form-container" id="inscreva-se">
                         <h3>Seja o primeiro a saber!</h3>
                         <p>Deixe seu e-mail para ser notificado sobre o lançamento, novidades e descontos exclusivos.</p>
-                        <form action="https://formspree.io/f/xovnnqde" method="POST">
+                        <form action="https://formsubmit.co/delphimultithreadingbook@gmail.com" method="POST">
                             <input type="email" name="email" placeholder="Seu melhor e-mail" required>
                             <button type="submit">Quero ser notificado!</button>
                         </form>
