--- a/index.html
+++ b/index.html
@@ -23,12 +23,7 @@
                     <h2>Threads, Concorrência, Paralelismo e Assincronismo</h2>
                     <p class="subtitle">O Guia Definitivo para Criar Aplicações Delphi Modernas, Rápidas e Responsivas.</p>
                     <div class="form-container" id="inscreva-se">
-                        <h3>Seja o primeiro a saber!</h3>
-                        <p>Deixe seu e-mail para ser notificado sobre o lançamento, novidades e descontos exclusivos.</p>
-                        <form action="https://formsubmit.co/delphimultithreadingbook@gmail.com" method="POST">
-                            <input type="email" name="email" placeholder="Seu melhor e-mail" required>
-                            <button type="submit">Quero ser notificado!</button>
-                        </form>
+                        <div class="ml-embedded" data-form="0KvxyG"></div>
                         <p class="release-note">Lançamento inicial em formato impresso.</p>
                     </div>
                 </div>
@@ -60,7 +55,7 @@
                     <p>Projete sistemas de alta performance. Entenda as nuances do gerenciamento de memória, as particularidades do desenvolvimento mobile e os padrões de resiliência essenciais para sistemas críticos.</p>
                 </div>
             </div>
-        </section>        
+        </section>
 
         <section id="highlights">
             <h2>Destaques do Livro</h2>
@@ -211,5 +206,12 @@
         </div>
     </footer>
 
-</body>
+    <script>
+        (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
+        .push(arguments);},l=d.createElement(e),l.async=1,l.src=u,
+        n=d.getElementsByTagName(e)[0],n.parentNode.insertBefore(l,n);})
+        (window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
+        ml('account', '1773681');
+    </script>
+    </body>
 </html>
