--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
                     <h2>Threads, Concorrência, Paralelismo e Assincronismo</h2>
                     <p class="subtitle">O Guia Definitivo para Criar Aplicações Delphi Modernas, Rápidas e Responsivas.</p>
                     <div class="form-container" id="inscreva-se">
-                        <div class="ml-embedded" data-form="0KvxyG"></div>
+                        <div class="ml-embedded" data-form="0KvxyG">
+                            <div class="fallback-message">
+                                <p><strong>Não consegue ver o formulário de inscrição?</strong></p>
+                                <p>Isso pode acontecer se você estiver usando um bloqueador de anúncios ou scripts.</p>
+                                <p>Por favor, desative-o para esta página ou clique no link abaixo para se inscrever diretamente:</p>
+                                <a href="https://preview.mailerlite.io/forms/1773681/164438806454339362/share" class="fallback-link" target="_blank" rel="noopener noreferrer">
+                                    Inscrever-se na Página Segura
+                                </a>
+                            </div>
+                            </div>
                         <p class="release-note">Lançamento inicial em formato impresso.</p>
                     </div>
                 </div>
