* Mestaurado form mailerlite

--- a/index.html
+++ b/index.html
@@ -25,8 +25,17 @@
                     <div class="form-container" id="inscreva-se">
                         <h3>Seja o primeiro a saber!</h3>
                         <p>Deixe seu e-mail para ser notificado sobre o lançamento, novidades e descontos exclusivos.</p>
-                        
-                        <button class="ml-onclick-form" onclick="ml('show', '0KvxyG', true)">Inscreva-se para o Lançamento</button>
+                        <form action="https://formsubmit.co/delphimultithreadingbook@gmail.com" method="POST">
+                            <input type="email" name="email" placeholder="Seu melhor e-mail" required>
+                            <button type="submit">Quero ser notificado!</button>
+                        </form>
+
+                        <!-- <button class="ml-onclick-form" onclick="ml('show', '0KvxyG', true)">Inscreva-se para o Lançamento</button> -->
+
+                        <!-- <form action="https://formsubmit.co/delphimultithreadingbook@gmail.com" method="POST">
+                            <input type="email" name="email" placeholder="Seu melhor e-mail" required>
+                            <button type="submit">Quero ser notificado!</button>
+                        </form> -->
                         
                         <p class="release-note">Lançamento inicial em formato impresso.</p>
                     </div>
