--- a/index.html
+++ b/index.html
@@ -133,9 +133,10 @@
                     <ul>
                         <li>1.1: O Problema do Congelamento da Interface (UI Freeze)</li>
                         <li>1.2: O que é Processamento Concorrente e Assíncrono?</li>
-                        <li>1.3: Os Verdadeiros Objetivos da Concorrência<span class="new-badge">Revisado</span></li>
-                        <li>1.4: O Conceito de Thread</li>
-                        <li>1.5: Quando NÃO usar Threads (e buscar alternativas)</li>
+                        <li>1.3: Uma Breve História da Concorrência: Da TThread à PPL<span class="new-badge">Novo</span></li>
+                        <li>1.4: Os Verdadeiros Objetivos da Concorrência<span class="new-badge">Revisado</span></li>
+                        <li>1.5: O Conceito de Thread</li>
+                        <li>1.6: Quando NÃO usar Threads (e buscar alternativas)</li>
                     </ul>
                 </div>
                 <div>
