--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     </ul>
                 </div>
                  <div>
-                    <h4>11: Aplicações Práticas de Banco de Dados<span class="new-badge">Novo</span></h4>
+                    <h4>11: Aplicações Práticas de Banco de Dados<span class="new-badge">Novo Capítulo</span></h4>
                     <ul>
                         <li>11.1: Os Princípios Inegociáveis: A Doutrina</li>
                         <li>11.2: Exemplo Essencial: TDataModule em uma TThread</li>
