--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 Do básico da TThread à elegância da Parallel Programming Library (PPL), você aprenderá a construir
                 aplicações robustas, evitar os temidos "UI Freezes", e resolver problemas complexos como race conditions
                 e deadlocks.</p>
-            <p><strong>Com 548 páginas, esta é uma formação completa que te leva do zero ao nível
+            <p><strong>Com quase 550 páginas, esta é uma formação completa que te leva do zero ao nível
                     profissional.</strong> Prepare-se para transformar suas aplicações desktop, mobile, web e cloud
                 entregando a performance e a fluidez que seus usuários esperam.</p>
         </section>
