--- a/index_pt.html
+++ b/index_pt.html
@@ -26,13 +26,15 @@
                     <p class="subtitle">O Guia Definitivo para Criar Aplicações Delphi Modernas, Rápidas e Responsivas.
                     </p>
                     <div class="purchase-info">
-                        <h3>Oferta de Lançamento (Brasil)</h3>
+                        <h3>🔥 Oferta Black Friday (Brasil)</h3>
                         <p class="price">
-                            <strong>R$ 297,36</strong>
+                            <del>R$ 297,36</del>
+                            <strong>R$ 245,00</strong>
+                            <span class="discount-badge">17% OFF</span>
                         </p>
                         <a href="https://clubedeautores.com.br/livro/delphi-multithreading" target="_blank"
-                            class="button primary-buy-button">Comprar no Brasil (Clube de Autores)</a>
-                        <p class="small-text">Impressão nacional com frete acessível.</p>
+                            class="button primary-buy-button">Comprar com Desconto (Clube de Autores)</a>
+                        <p class="small-text">Impressão nacional com frete acessível. Oferta por tempo limitado.</p>
                     </div>
 
                     <div class="international-stores">
